# sti-manager

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/sti/: etrle.rs  mod.rs  parser.rs  types.rs
src/components/: ConfirmationDialog.css  ConfirmationDialog.tsx  ExportDialog.css  ExportDialog.tsx  FileExplorer.css  FileExplorer.tsx  ImageEditor.css  ImageEditor.tsx  ImageImportDialog.css  ImageImportDialog.tsx  ImageList.css  ImageList.tsx  ImageViewer.css  ImageViewer.tsx  MetadataPanel.css  MetadataPanel.tsx  ToolBar.tsx
src/services/: api.ts
src/types/: sti.ts
