[package]
name = "sti-manager"
version = "0.1.0"
description = "STI File Manager for Jagged Alliance 2"
authors = ["STI Manager Team"]
edition = "2021"
default-run = "sti-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sti-manager"
path = "src/main.rs"

[[bin]]
name = "debug_sti"
path = "src/bin/debug_sti.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sti_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
byteorder = "1.5"
thiserror = "1.0"
lazy_static = "1.4"

